# robocup-at-home-2021-asia-pacific-challenge

./: Dockerfile  README.md
deepsparse_yolo/: CMakeLists.txt  package.xml
deepsparse_yolo/launch/: yolo.launch
deepsparse_yolo/scripts/: depth.py  object.py  param.py  yolo.py
deepsparse_yolo/test/: test_yolo.py
deepsparse_yolo_msgs/: CMakeLists.txt  package.xml
deepsparse_yolo_msgs/msg/: BBoxes.msg  Object.msg  Objects.msg
deepsparse_yolo_msgs/srv/: ClearObjects.srv  RemoveObject.srv  SetDetectState.srv
hsrb_custom_moveit_config/: CMakeLists.txt  package.xml
hsrb_custom_moveit_config/config/: all.rviz  fake_controllers.yaml  hsrb.srdf  hsrb_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  sensors_3d.yaml
hsrb_custom_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  hsrb_demo_with_controller.launch  hsrb_moveit_controller_manager.launch.xml  hsrb_moveit_sensor_manager.launch.xml  move_group.launch  moveit.rviz  octomap_filter.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  (+2 more)
robocup_hsr_simulator/: CMakeLists.txt  package.xml
robocup_hsr_simulator/launch/: run.launch  task_1.launch
robocup_hsr_simulator/scripts/: param.py  remove.py  task_1.py  task_2.py  utils_v2.py
ultralytics-yolo/: deepsparse-yolov3.ipynb  deepsparse_utils.py
(+4 files in other folders)
