<?xml version="1.0"?>
<package format="2">
    
  <name>robocup_hsr_simulator</name>
  <version>0.0.0</version>
  <description>The robocup_hsr_simulator package</description>

  <maintainer email="chungpuonn@gmail.com">root</maintainer>

  <license>BSD</license>

  <author email="chungpuonn@gmail.com">PuOnn Chung</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>deepsparse_yolo</build_depend>
  <build_depend>hsrb_custom_moveit_config</build_depend>
  <build_depend>robocup_task2</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>deepsparse_yolo</build_export_depend>
  <build_export_depend>hsrb_custom_moveit_config</build_export_depend>
  <build_export_depend>robocup_task2</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>deepsparse_yolo</exec_depend>
  <exec_depend>hsrb_custom_moveit_config</exec_depend>
  <exec_depend>robocup_task2</exec_depend>

</package>
